pull server IP from the client

--- a/public/threejs/three.html
+++ b/public/threejs/three.html
@@ -29,7 +29,9 @@
                 var unlocked1 = false;
                 var unlocked2 = false;
                 var whiskey = 0;
+                var serverIP;
 
+                // todo: get serverIP and replace localhost
                 var socket = io.connect('localhost:5000');
                 var orderOfMag = (3.14159260/180);
 
