move unlock code to revealing module pattern

--- a/public/threejs/three.html
+++ b/public/threejs/three.html
@@ -17,6 +17,7 @@
         <script src="js/libs/stats.min.js"></script>
         <script src="js/jquery-2.1.1.min.js"></script>
         <script src="js/socket.io.js"></script>
+        <script src="threejs/unlockBase.js"></script>
         <script src="threejs/generateThree.js"></script>
 	</body>
 </html>
