added checks for unlock

--- a/three.html
+++ b/three.html
@@ -8,8 +8,10 @@
                     margin: 0px;
                     overflow: hidden;
                 }
+            span.glyphicon { font-size: 4em;color:grey; }
         </style>
-        <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css"></script>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	</head>
 	<body>
 		<script src="lib/three.min.js"></script>
